tooling/tree-sitter-satsuma/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.import_decl,
        $.note_block,
        $.namespace_block,
        $.schema_block,
        $.fragment_block,
        $.transform_block,
        $.mapping_block,
      ),

    // ── Namespace block ──────────────────────────────────────────────────
    // Flat (non-nestable) namespace: namespace <name> (<metadata>)? { <defs> }

    schema_block: ($) =>
      seq(
        "schema",
        $.block_label,
        optional($.metadata_block),
        "{",
        optional($.schema_body),
        "}",
      ),

    // ── Fragment block ────────────────────────────────────────────────────

    mapping_block: ($) =>
      seq(
        "mapping",
        optional($.block_label),
        optional($.metadata_block),
        "{",
        $.mapping_body,
        "}",
      ),

    mapping_body: ($) =>
      repeat1($._mapping_body_item),

    _mapping_body_item: ($) =>
      choice(
        $.note_block,
        $.source_block,
        $.target_block,
        $.each_block,
        $.flatten_block,
        $._arrow_decl,
      ),

    // source { ref1, ref2 } or source { ref1 ref2 } or source { "join ..." }
    source_block: ($) =>
      seq(
        "source",
        "{",
        repeat1(seq($._source_entry, optional(","))),
        "}",
      ),

    _source_entry: ($) => $.source_ref,

    source_ref: ($) =>
      seq(
        choice($.qualified_name, $.backtick_name, $.identifier, $.nl_string),
        optional($.metadata_block),
      ),

    // target { ref }
    target_block: ($) =>
      seq(
        "target",
        "{",
        $._source_entry,
        "}",
      ),

    // ── each/flatten blocks ─────────────────────────────────────────────
    // each src_path -> tgt_path (metadata)? { nested_block_item* }
    // flatten src_path -> tgt_path (metadata)? { nested_block_item* }
    //
    // The body allows nested each/flatten per spec section 4.4. Source/target
    // blocks and note blocks are mapping-level constructs and are not permitted
    // inside nested blocks.

    note_block: ($) =>
      seq(
        "note",
        "{",
        choice($.multiline_string, repeat1($.nl_string)),
        "}",
      ),

    // ── Schema body ───────────────────────────────────────────────────────

    schema_body: ($) => repeat1($._schema_body_item),

    _schema_body_item: ($) =>
      choice(
        $.field_decl,
        $.fragment_spread,
        $.note_block,
      ),

    // ── Field declaration (unified syntax) ──────────────────────────────
    // All fields follow: NAME [TYPE] [(metadata)] [{schema_body}]
    //
    // TYPE can be:
    //   - a scalar type: STRING, DECIMAL(12,2), etc. (type_expr token)
    //   - record: single nested structure
    //   - list_of record: list of structured elements
    //   - list_of TYPE: scalar list (list_of STRING, list_of INT, etc.)

    field_decl: ($) =>
      choice(
        // NAME record (metadata)? { schema_body }
        $._record_field,
        // NAME list_of record (metadata)? { schema_body }
        $._list_of_record_field,
        // NAME list_of TYPE (metadata)?
        $._list_of_scalar_field,
        // NAME TYPE (metadata)?  — original scalar field
        $._scalar_field,
        // NAME (metadata)  — typeless field (type omitted, metadata required to disambiguate)
        $._typeless_field,
      ),

    _scalar_field: ($) =>
      seq(
        $.field_name,
        $.type_expr,
        optional($.metadata_block),
      ),

    _typeless_field: ($) =>
      seq(
        $.field_name,
        $.metadata_block,
      ),

    _record_field: ($) =>
      seq(
        $.field_name,
        "record",
        optional($.metadata_block),
        "{",
        optional($.schema_body),
        "}",
      ),

    _list_of_record_field: ($) =>
      seq(
        $.field_name,
        "list_of",
        "record",
        optional($.metadata_block),
        "{",
        optional($.schema_body),
        "}",
      ),

    _list_of_scalar_field: ($) =>
      seq(
        $.field_name,
        "list_of",
        $.type_expr,
        optional($.metadata_block),
      ),

    field_name: ($) => choice($.identifier, $.backtick_name),

    type_expr: (_) =>
      token(
        seq(
          /[a-zA-Z_][a-zA-Z0-9_-]*/,
          optional(seq("(", /[^)]*/, ")")),
        ),
      ),

    // ── Fragment spread ───────────────────────────────────────────────────

    computed_arrow: ($) =>
      seq(
        "->",
        $.tgt_path,
        optional($.metadata_block),
        optional($._arrow_transform_body),
      ),

    // src_path -> tgt_path (metadata)? { arrow_decl* }
    map_arrow: ($) =>
      seq(
        commaSep1($.src_path),
        "->",
        $.tgt_path,
        optional($.metadata_block),
        optional($._arrow_transform_body),
      ),

    // { pipe_chain } transform body on an arrow
    _arrow_transform_body: ($) => seq("{", $.pipe_chain, "}"),

    // ── Arrow paths ───────────────────────────────────────────────────────
    // src_path and tgt_path are named wrapper nodes.
    // [] is removed from all paths — iteration is expressed via each/flatten.

    src_path: ($) => $._path_expr,
    tgt_path: ($) => $._path_expr,

    _path_expr: ($) =>
      choice(
        $.namespaced_path,
        $.backtick_path,
        $.relative_field_path,
        $.field_path,
      ),

    // ns::identifier or ns::identifier.field...
    // token.immediate(".") ensures continuation dots must be adjacent (no
    // newlines) so multi-line bare arrows are not merged into one path.
    namespaced_path: ($) =>
      prec.right(seq(
        $.identifier,
        "::",
        $._path_seg,
        repeat(seq(token.immediate("."), $._path_seg)),
      )),

    // `BacktickRef` or `BacktickRef`.field...
    backtick_path: ($) =>
      prec.right(seq(
        $.backtick_name,
        repeat(seq(token.immediate("."), $._path_seg)),
      )),

    // .field or .field.nested...
    relative_field_path: ($) =>
      prec.right(seq(
        ".",
        $._path_seg,
        repeat(seq(token.immediate("."), $._path_seg)),
      )),

    // field or field.nested...
    field_path: ($) =>
      prec.right(seq(
        $.identifier,
        repeat(seq(token.immediate("."), $._path_seg)),
      )),

    _path_seg: ($) => choice($.identifier, $.backtick_name),

    // ── Pipe chain (transform, arrow bodies) ─────────────────────────────

    pipe_chain: ($) => seq($.pipe_step, repeat(seq("|", $.pipe_step))),

    pipe_step: ($) =>
      choice(
        $.fragment_spread,
        $.map_literal,
        $.pipe_text,
      ),

    // pipe_text: greedy repeat of NL-compatible tokens.
    //
    // Every sequence of tokens between pipe delimiters (or between { and } / |)
    // is a single NL step. Bare identifiers like `trim`, numbers, quoted
    // strings, dotted names, arithmetic operators, and parenthesised text such
    // as `round(2)` are all treated as plain NL for downstream interpretation.
    // The only structured pipe-step forms are fragment spreads (`...name`) and
    // value maps (`map { ... }`), which are parsed by sibling rules above.
    //
    // | and } naturally terminate it (not in the choice set).
    pipe_text: ($) =>
      repeat1(
        choice(
          $._pipe_text_atom,
          $._parenthesized_pipe_text,
        ),
      ),

    _pipe_text_atom: ($) =>
      choice(
        $.at_ref,
        $.nl_string,
        $.multiline_string,
        $.backtick_name,
        $.dotted_name,
        $.number_literal,
        $.identifier,
        $._comparison_op,
        $._arithmetic_op,
      ),

    _parenthesized_pipe_text: ($) =>
      seq(
        "(",
        repeat(
          choice(
            $._pipe_text_atom,
            $._parenthesized_pipe_text,
            ",",
          ),
        ),
        ")",
      ),

    // ── Map literal ───────────────────────────────────────────────────────

    _comparison_op: (_) =>
      token(choice(">=", "<=", ">", "<", "!=", "==")),

    block_label: ($) => choice($.identifier, $.backtick_name),

    // ── Metadata block ────────────────────────────────────────────────────

    metadata_block: ($) =>
      seq(
        "(",
        optional(commaSep1($._metadata_entry)),
        optional(","),
        ")",
      ),

    _metadata_entry: ($) =>
      choice(
        $.enum_body,
        $.slice_body,
        $.note_tag,
        $.tag_with_value,
        $.tag_token,
      ),

    note_tag: ($) =>
      seq(
        "note",
        choice($.multiline_string, $.nl_string),
      ),

    // tag_with_value: identifier followed by greedy value tokens
    tag_with_value: ($) => seq($.identifier, $.value_text),

    // value_text: greedy repeat of basic token types.
    // Commas and ) naturally terminate it (not in the choice set).
    value_text: ($) =>
      repeat1(
        choice(
          $.at_ref,
          $.nl_string,
          $.multiline_string,
          $.backtick_name,
          $.qualified_dotted_name,
          $.dotted_name,
          $.qualified_name,
          $.number_literal,
          $.boolean_literal,
          $.identifier,
          $._comparison_op,
          seq(
            "{",
            commaSep1(choice($.qualified_name, $.identifier)),
            optional(","),
            "}",
          ),
        ),
      ),

    // ns::identifier.field... — namespace-qualified dotted ref path
    number_literal: (_) => /[0-9]+(\.[0-9]+)?/,

    tag_token: ($) => $.identifier,

    // ── @ref — structural cross-reference ────────────────────────────────
    // @identifier, @schema.field, @ns::schema.field, @`backtick-name`.field
    // Used in pipe_text and value_text for structural references.
    at_ref: ($) =>
      seq(
        "@",
        choice(
          seq($.identifier, "::", $.identifier, repeat(seq(".", $._path_seg))),
          seq($.backtick_name, repeat(seq(".", $._path_seg))),
          seq($.identifier, repeat(seq(".", $._path_seg))),
        ),
      ),

    // ── Lexical tokens ────────────────────────────────────────────────────

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_-]*/,

    backtick_name: (_) => /`(?:[^`\\]|\\.)+`/,

    multiline_string: (_) => token(prec(1, /"""([^"]|"[^"]|""[^"])*"""/)),

    nl_string: (_) => /"(?:[^"\\]|\\.)*"/,

    warning_comment: (_) => token(prec(3, /\/\/!.*/)),
    question_comment: (_) => token(prec(2, /\/\/\?.*/)),
    comment: (_) => token(prec(1, /\/\/.*/)),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
